--- a/source/_posts/2019-12-01-使用-jsDelivr-加速网站静态资源.md
+++ b/source/_posts/2019-12-01-使用-jsDelivr-加速网站静态资源.md
@@ -55,7 +55,7 @@ thumbnail:  https://cdn.jsdelivr.net/gh/chralpha/imgbag/20200130145232.png
 
 ![](https://cdn.jsdelivr.net/gh/chralpha/imgbag/20191201143642.png)
 
-- 关联阅读：[ChrAlpha - PicGo + GitHub 搭建免费图床](/post/free-img-hosting-with-github-and-picgo/) 
+- 关联阅读：[ChrAlpha - PicGo + GitHub 搭建免费图床](https://chralpha.com/post/free-img-hosting-with-github-and-picgo/) 
 
 ### 尾巴
 
