--- a/source/_posts/2020-01-21-如何优雅地订阅-RSS.md
+++ b/source/_posts/2020-01-21-如何优雅地订阅-RSS.md
@@ -16,7 +16,7 @@ purl: subscribe-rss-more-variously
 thumbnail: https://cdn.jsdelivr.net/gh/chralpha/imgbag/20200130170116.png
 ---
 
-[上篇文章](/post/use-tt-rss-to-build-your-own-rss-service/) 介绍了如何搭建自己的 RSS 服务，提升阅读效率。如果遇到一个感兴趣的网站，该如何将其放进自己的 RSS 订阅里呢？
+[上篇文章](https://chralpha.com/post/use-tt-rss-to-build-your-own-rss-service/) 介绍了如何搭建自己的 RSS 服务，提升阅读效率。如果遇到一个感兴趣的网站，该如何将其放进自己的 RSS 订阅里呢？
 
 <!--more-->
 
