--- a/source/_posts/2020-02-05-V2ray-CDN-稳定看世界.md
+++ b/source/_posts/2020-02-05-V2ray-CDN-稳定看世界.md
@@ -94,10 +94,10 @@ bash <(curl -s -L https://git.io/v2ray.sh)
 
 填写的域名记得解析到 VPS 的 IP 上，如果你还没有域名，可以考虑：
 
-- 付费：[浅谈国外域名注册商](/post/49/) 
-- 免费：[Freenom 免费域名申请及使用](/post/33/) 
+- 付费：[浅谈国外域名注册商](https://chralpha.com/post/introduce-some-foreign-domain-registrars/) 
+- 免费：[Freenom 免费域名申请及使用](https://chralpha.com/post/get-a-free-domain-with-freenom/) 
 
-域名其实不贵，如果要求不高再考虑免费域名，毕竟一个域名可以干许多事情，Namesilo 还提供终身的免费 WhoisGuard 隐私防护。获得域名后将域名托管给 Cloudflare 并打开 CDN 服务。[教程](/post/51/) 
+域名其实不贵，如果要求不高再考虑免费域名，毕竟一个域名可以干许多事情，Namesilo 还提供终身的免费 WhoisGuard 隐私防护。获得域名后将域名托管给 Cloudflare 并打开 CDN 服务。[教程](https://chralpha.com/post/cloudflare-free-dns-products-usage/) 
 
 填写好域名后不要自动配置 TLS ，我们后面自己来。至于去广告和安装 SS 自己看，反正我是没有选择，让专业的人做专业的事。
 
